# cpp-backend-labs

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: tests.yml
src/: CMakeLists.txt
src/test_env_ci/: CMakeLists.txt  multiply.cpp
src/test_env_ci/include/multiply/: multiply.h
tests/: CMakeLists.txt  test_env_ci.cpp
