include(FetchContent)

FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        v1.15.2
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_executable(unit_tests
  test_env_ci.cpp
)

target_link_libraries(unit_tests PRIVATE
  multiply
  GTest::gtest_main
)

add_test(NAME AllTests COMMAND unit_tests)
